--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "pg": "^8.5.1",
+    "react-js-pagination": "^3.0.3",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
